# vim-royale

./: .dockerignore  .editorconfig  .env  .env-example  .gitignore  Cargo.toml  README.md  TODO.md  client  client.Dockerfile  interview.ts  jest.config.js  out  package-lock.json  package.json  prettier.config.js  run  server.Dockerfile  test3.ts  ts-server.Dockerfile  tsconfig.json  tslint.json  tutor
crates/game_core/: Cargo.toml
crates/game_core/src/: lib.rs  player.rs
design-doc/: VimRoyale02.excalidraw  VimRoyale03.excalidraw
encoding/: Cargo.toml
encoding/src/: lib.rs  server.rs  version.rs
game/: Cargo.toml
game/src/: board.rs  connection.rs  game.rs  game_comms.rs  game_manager.rs  lib.rs  player.rs  test.ts  test2.ts
game/src/sub_games/: loop_runner.rs  mod.rs  types.rs
lua/: vim-royale
lua/vim-royale/: init.lua
lua/vim-royale/window/: init.lua
map/: Cargo.toml
map/src/: lib.rs  map.rs  rand.rs  window.rs
react/: .babelrc  package-lock.json  package.json  pnpm-lock.yaml  prod.config.js  readme.md  server.js  tsconfig.json  webpack.config.js
react/client/: index.tsx
react/src/: client.tsx  container.tsx  index.html  scroller.ts  server.tsx  status.tsx  style.css  terminal.tsx
src/: args.rs  board.ts  client-socket.ts  context.ts  entities.ts  events.ts  game-controller.ts  index.ts  input-event-handler.ts  lib.rs  renderer.ts  test.ts  types.ts  version.rs
src/__tests__/: _integration.ts  _utils.ts  game.ts  game.utils.ts  integration.ts  mock.bless.ts  mockServer.ts  server.utils.ts  utils.ts
src/__tests__/characters/: basic.ts  default.ts  styled.ts
src/__tests__/objects/: bullet.ts
src/__tests__/objects/components/: Position.ts
src/board/: index.ts  jumps.ts
src/board/__tests__/: index.ts
src/characters/: basic.ts  default.ts  styled.ts
src/connections/: connection.rs  mod.rs  parser.rs
src/game/: game.rs  game.ts  map.rs  mod.rs
src/input/: board.ts  command-node.ts  getMovement.ts  index.ts  insert.ts  mainMenu.ts  normal.ts  types.ts
src/input/__tests__/: command-node.ts
src/logger/: console.error.ts  console.log.ts  index.ts
src/messages/: messages.ts  server.rs
src/network/: components.ts  index.ts
src/objects/: bullet.ts  encodable.ts  index.ts  mode.ts  player.ts  types.ts
src/objects/components/: create-entity.ts  force-position.ts  lifetime.ts  movement.ts  network-sync.ts  position.ts  styled.ts  velocity.ts
src/screen/: main-menu.ts
src/server/: commands.ts  game.ts  index.ts  messages.ts  server.ts  types.ts
src/server/commands/: createEntity.ts  types.ts  updatePosition.ts
src/server/messages/: ;  buffer-reader.ts  buffer-writer.ts  correctPosition.ts  createEntity.ts  game-state-update.ts  index.ts  types.ts  updatePosition.ts
src/stats/: index.ts
src/systems/: ClientCreateEntitySystem.ts  ClientForcePositionUpdateSystem.ts  ClientMovementSystem.ts  ClientNetworkSyncSystem.ts  ClientRenderSystem.ts  GameMovementSystem.ts  LifetimeSystem.ts  MovementSystem.ts  RenderSystem.ts  ServerCreateEntitySystem.ts  ServerMovementSystem.ts  ServerUpdatePlayers.ts  System.ts  VelocitySystem.ts  confirmMovementWithServer.ts  types.ts
src/systems/render/: apply.ts  get-render-bounds.ts  index.ts  is-in-window.ts  jumpPointRender.ts  make-relative.ts  types.ts
src/systems/render/__tests__/: apply.ts  get-render-bounds.ts  is-in-window.ts  make-relative.ts
src/systems/render/internals/: get-view-area.ts
src/updates/: index.ts
src/util/: SyncObjectPool.ts  buffer-reader.ts  buffer-writer.ts  getBox.ts  getNextLoop.ts  is-server.ts  pool.ts  promisify.ts  random.ts  wait.ts
tools/flashfork/: index.ts  reader.ts  renderer.ts
vim_royale/: Cargo.toml
vim_royale/src/: args.rs  lib.rs  main.rs
vim_royale/src/__game/: game.ts  map.rs
vim_royale/src/config/: index.ts
vim_royale/src/connections/: connection.rs  mod.rs
vim_royale/src/game/: timer.ts
vim_royale/src/messages/: messages.ts  server.rs
vim_royale_client/: Cargo.toml  index.css  package.json
vim_royale_client/src/: main.rs  test.ts  theprimeagen.text  vim_royale.rs
vim_royale_client/src/state/: mod.rs  state.rs
vim_royale_client/src/state/reactors/: debug.rs  mod.rs  player_position.rs  status.rs  utils.rs
vim_royale_server/: Cargo.toml
vim_royale_server/src/: main.rs
vim_royale_view/: Cargo.toml  index.css  index.html
vim_royale_view/src/: container.rs  lib.rs  main.rs  message.rs  state.rs  status.rs  string-scroller.rs  string_scroller.rs
vim_royale_view/src/ascii_art/: ascii_text.txt  generator.rs  mod.rs
vim_royale_view/src/ascii_art/arts/: ansi_regular.txt  example.txt  transform.py
vim_royale_view/src/terminal/: mod.rs
vim_royale_view/src/utils/: mod.rs  screen.rs  tick.rs  window.rs
