[package]
name = "vim-royale"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
axum = "0.5.17"
bincode = "1.3.3"
clap = { version = "4.0.17", features = ["derive"] }
deku = "0.14.1"
env_logger = "0.9.1"
log = "0.4.17"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.87"
serde_repr = "0.1.9"
tokio = { version = "1.21.2", features = ["full"] }
uuid = { version = "1.2.1", features = ["serde"] }
