[package]
name = "vim-royale"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
async-stream = "0.3.3"
async-trait = "0.1.58"
axum = "0.5.16"
bincode = "1.3.3"
clap = { version = "4.0.9", features = ["derive"] }
deku = "0.14.0"
env_logger = "0.9.1"
futures = "0.3.25"
futures-util = "0.3.25"
log = "0.4.17"
net = "0.1.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
serde_repr = "0.1.9"
tokio = { version = "1.21.2", features = ["full"] }
tokio-stream = { version = "0.1.11", features = ["net"] }
tokio-tungstenite = "0.17.2"
uuid = { version = "1.1.2", features = ["serde"] }
