[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.26", features = ["derive"] }
encoding = { path = "../encoding" }
game_core = { path = "../crates/game_core" }
env_logger = "0.9.3"
future-utils = "0.12.1"
futures = "0.3.25"
futures-util = { version = "0.3.25", features = ["sink"] }
log = "0.4.17"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.88"
tokio = { version = "1.22.0", features = ["full"] }
tokio-tungstenite = "0.17.2"
map = { path = "../map" }
async-trait = "0.1.59"
