[package]
name = "vim_royale"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.24", features = ["derive"] }
env_logger = "0.9.3"
futures = "0.3.25"
futures-util = "0.3.25"
log = "0.4.17"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1.21.2", features = ["full"] }
tokio-tungstenite = "0.17.2"
encoding = { path = "../encoding" }
game = { path = "../game" }
web-sys = { version = "0.3.60", features = ["MessageChannel", "MessagePort"] }
async-trait = "0.1.61"
