[package]
name = "vim_royale_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
futures = "0.3.25"
gloo = { version = "0.8.0", features = ["futures"] }
reqwasm = "0.5.0"
wasm-bindgen-futures = "0.4.33"
encoding = { path = "../encoding" }
vim_royale_view = { path = "../vim_royale_view" }
game_core = { path = "../crates/game_core" }
map = { path = "../map" }
getrandom = { version = "0.2.8", features = ["js"] }
tokio-tungstenite-wasm = "0.1.0"
leptos = { version = "0.0.19", default-features = false, features = ["interning",]}
web-sys = { version = "0.3", features = ["MessageChannel", "MessagePort"] }

[features]
default = ["hydrate"]
ssr = ["leptos/ssr"]
hydrate = ["leptos/hydrate"]
