[package]
name = "vim_royale_view"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arr_macro = "0.1.3"
encoding = { path = "../encoding" }
leptos = { version = "0.0.18", default-features = false }

[features]
default = ["hydrate"]
ssr = ["leptos/ssr"]
hydrate = ["leptos/hydrate"]

