[package]
name = "vim_royale_view"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding = { path = "../encoding" }
map = { path = "../map" }
leptos.workspace = true
futures = "0.3.25"
anyhow = "1.0.66"

[features]
default = ["hydrate"]
ssr = ["leptos/ssr"]
hydrate = ["leptos/hydrate"]

